force-app/main/default/objects/WorkOrder/fields/Access_OK__c.field-meta.xml
<CustomField>
    <fullName>Access_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access OK</label>
    <type>Checkbox</type>
</CustomField>