force-app/main/default/objects/WorkOrder/fields/Actual_HC__c.field-meta.xml
<CustomField>
    <fullName>Actual_HC__c</fullName>
    <label>Actual Headcount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>