force-app/main/default/objects/WorkOrder/fields/Actual_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Headcount__c</fullName>
    <label>Actual Headcount A HC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>