force-app/main/default/objects/WorkOrder/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <summarizedField>Time_Entry__c.Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Entry__c.Source__c</field>
        <operation>notEqual</operation>
        <value>Excluded</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>