force-app/main/default/objects/WorkOrder/fields/Afternoon_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Afternoon_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afternoon Check Complete</label>
    <type>Checkbox</type>
</CustomField>