force-app/main/default/objects/WorkOrder/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved By</relationshipLabel>
    <relationshipName>WO_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>