force-app/main/default/objects/WorkOrder/fields/Aqua_Community__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Community</label>
    <type>Checkbox</type>
</CustomField>