force-app/main/default/objects/WorkOrder/fields/Aqua_Flags_Count__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Flags_Count__c</fullName>
    <label>Aqua Flags Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>