force-app/main/default/objects/WorkOrder/fields/Aqua_Measuring_Cups__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Measuring_Cups__c</fullName>
    <label>Aqua Measuring Cups</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>