force-app/main/default/objects/WorkOrder/fields/Aqua_Tech__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Tech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aqua Tech</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Aqua Tech Work Orders</relationshipLabel>
    <relationshipName>WO_Aqua_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>