force-app/main/default/objects/WorkOrder/fields/Arrival_Lat__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Lat__c</fullName>
    <label>Arrival Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>