force-app/main/default/objects/WorkOrder/fields/Arrival_Lng__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Lng__c</fullName>
    <label>Arrival Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>