force-app/main/default/objects/WorkOrder/fields/Arrived_At__c.field-meta.xml
<CustomField>
    <fullName>Arrived_At__c</fullName>
    <label>Arrived On Site At</label>
    <type>DateTime</type>
</CustomField>