force-app/main/default/objects/WorkOrder/fields/Avg_Foreman_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_Foreman_Score__c</fullName>
    <label>Avg Foreman Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>