force-app/main/default/objects/WorkOrder/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description>Tracks the billing lifecycle independently of QI. Set to Pending Invoice when closeout is approved. Managed by InvoiceService.</description>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting Payment</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>