force-app/main/default/objects/WorkOrder/fields/BMG_Package__c.field-meta.xml
<CustomField>
    <fullName>BMG_Package__c</fullName>
    <label>BMG Package</label>
    <length>100</length>
    <type>Text</type>
</CustomField>