force-app/main/default/objects/WorkOrder/fields/Bonus_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Eligible</label>
    <type>Checkbox</type>
</CustomField>