force-app/main/default/objects/WorkOrder/fields/Builder_Market_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Market_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Market Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WO_BMA</relationshipName>
    <type>Lookup</type>
</CustomField>