force-app/main/default/objects/WorkOrder/fields/Builder_PO__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builder PO that creates or drives this standard Field Service Work Order.</description>
    <label>Builder PO</label>
    <referenceTo>Builder_PO__c</referenceTo>
    <relationshipLabel>Standard Work Orders</relationshipLabel>
    <relationshipName>Standard_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>