force-app/main/default/objects/WorkOrder/fields/Builder_Punch_Clear__c.field-meta.xml
<CustomField>
    <fullName>Builder_Punch_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Builder Punch Clear</label>
    <type>Checkbox</type>
</CustomField>