force-app/main/default/objects/WorkOrder/fields/Builder_Regional__c.field-meta.xml
<CustomField>
    <fullName>Builder_Regional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Regional</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder Regional</relationshipLabel>
    <relationshipName>WO_Builder_Regional</relationshipName>
    <type>Lookup</type>
</CustomField>