force-app/main/default/objects/WorkOrder/fields/Builder_WO_Number__c.field-meta.xml
<CustomField>
    <fullName>Builder_WO_Number__c</fullName>
    <description>This is where we put the PO/EPO numbers when we are paid for a job.</description>
    <label>Builder WO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>