force-app/main/default/objects/WorkOrder/fields/Clock_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_In_Time__c</fullName>
    <label>Clock-In Time</label>
    <type>DateTime</type>
</CustomField>