force-app/main/default/objects/WorkOrder/fields/Clock_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out_Time__c</fullName>
    <label>Clock-Out Time</label>
    <type>DateTime</type>
</CustomField>