force-app/main/default/objects/WorkOrder/fields/Closeout_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Notes__c</fullName>
    <label>Closeout Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>