force-app/main/default/objects/WorkOrder/fields/Closeout_Photo_Count__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Photo_Count__c</fullName>
    <description>Outdoor Living field execution gate: count of captured closeout photos (minimum 4).</description>
    <label>Closeout Photo Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>