force-app/main/default/objects/WorkOrder/fields/Closeout_Photos__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Photos__c</fullName>
    <description>Photos submitted by field manager at job closeout.</description>
    <label>Closeout Photos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>