force-app/main/default/objects/WorkOrder/fields/Closeout_Photos_Attached__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Photos_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closeout Photos Attached</label>
    <type>Checkbox</type>
</CustomField>