force-app/main/default/objects/WorkOrder/fields/Closeout_Quantities_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Quantities_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closeout Quantities Confirmed</label>
    <type>Checkbox</type>
</CustomField>