force-app/main/default/objects/WorkOrder/fields/Closeout_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Submitted_Date__c</fullName>
    <label>Closeout Submitted Date</label>
    <type>DateTime</type>
</CustomField>