force-app/main/default/objects/WorkOrder/fields/Closing_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Closing_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Closing Work Orders</relationshipLabel>
    <relationshipName>WO_Closing</relationshipName>
    <type>Lookup</type>
</CustomField>