force-app/main/default/objects/WorkOrder/fields/ClosingCare_Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>ClosingCare_Enrolled_Date__c</fullName>
    <label>ClosingCare Enrolled Date</label>
    <type>Date</type>
</CustomField>