force-app/main/default/objects/WorkOrder/fields/ClosingCare_Status__c.field-meta.xml
<CustomField>
    <fullName>ClosingCare_Status__c</fullName>
    <label>ClosingCare Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Enrolled</fullName>
                <default>true</default>
                <label>Not Enrolled</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Exited - Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>