force-app/main/default/objects/WorkOrder/fields/Community_FML__c.field-meta.xml
<CustomField>
    <fullName>Community_FML__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community FML</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>