force-app/main/default/objects/WorkOrder/fields/Community_Sod_Roll_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Community_Sod_Roll_Coverage__c</fullName>
    <description>Formula: promotes Community_FML__r.Avg_Sod_Roll_Coverage__c to the WorkOrder level. Required because Salesforce formula compiler cannot traverse two hops from a custom object (DQC) through a standard object (WorkOrder) to a custom lookup target (Community__c). DQC.Sod_Rolls_Expected__c references this field instead. PKG-05c.</description>
    <formula>Community_FML__r.Avg_Sod_Roll_Coverage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Sod Roll Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>