force-app/main/default/objects/WorkOrder/fields/Community_Tree_Average__c.field-meta.xml
<CustomField>
    <fullName>Community_Tree_Average__c</fullName>
    <label>Community Tree Average</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>