force-app/main/default/objects/WorkOrder/fields/Confirmed_Controllers__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Controllers__c</fullName>
    <label>Confirmed Controllers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>