force-app/main/default/objects/WorkOrder/fields/Confirmed_Heads__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Heads__c</fullName>
    <label>Confirmed Heads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>