force-app/main/default/objects/WorkOrder/fields/Confirmed_Hoses__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Hoses__c</fullName>
    <label>Confirmed Hoses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>