force-app/main/default/objects/WorkOrder/fields/Confirmed_Valves__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Valves__c</fullName>
    <label>Confirmed Valves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>