force-app/main/default/objects/WorkOrder/fields/Construction_Manager__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the point of contact for the builder, or the homeowner.</description>
    <label>Construction Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>