force-app/main/default/objects/WorkOrder/fields/Construction_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager_Email__c</fullName>
    <formula>Construction_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Manager Email</label>
    <type>Text</type>
</CustomField>