force-app/main/default/objects/WorkOrder/fields/Construction_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager_Phone__c</fullName>
    <formula>Construction_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Manager Phone</label>
    <type>Text</type>
</CustomField>