force-app/main/default/objects/WorkOrder/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The crew assigned to execute the job</description>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>