force-app/main/default/objects/WorkOrder/fields/Crew_Complete_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Crew_Complete_Timestamp__c</fullName>
    <label>Crew Complete Timestamp</label>
    <type>DateTime</type>
</CustomField>