force-app/main/default/objects/WorkOrder/fields/Crew_Completed__c.field-meta.xml
<CustomField>
    <fullName>Crew_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Outdoor Living field execution gate: crew has marked the install complete.</description>
    <label>Crew Completed</label>
    <type>Checkbox</type>
</CustomField>