force-app/main/default/objects/WorkOrder/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WO_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>