force-app/main/default/objects/WorkOrder/fields/CSM_Approval_Due_At__c.field-meta.xml
<CustomField>
    <fullName>CSM_Approval_Due_At__c</fullName>
    <inlineHelpText>SLA due time for CSM approval (submission + 24h).</inlineHelpText>
    <label>CSM Approval Due At</label>
    <type>DateTime</type>
</CustomField>