force-app/main/default/objects/WorkOrder/fields/Cushion_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cushion_Minutes__c</fullName>
    <label>Cushion Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>