force-app/main/default/objects/WorkOrder/fields/Customer_Visible_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visible_Status__c</fullName>
    <label>Customer Visible Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>