force-app/main/default/objects/WorkOrder/fields/Debris_Clear__c.field-meta.xml
<CustomField>
    <fullName>Debris_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debris Clear</label>
    <type>Checkbox</type>
</CustomField>