force-app/main/default/objects/WorkOrder/fields/Delivery_QC_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QC_Status__c</fullName>
    <description>Formula-computed delivery quality status for this work order. Passed = Delivery_Quality_Check__c.Overall_Pass__c is true. Failed = Delivery_Issue_Flag__c is true. Not Required = Sod_Square_Footage__c is 0 AND Mulch_CY__c is 0 (no sod or mulch in scope). Pending = sod or mulch is in scope but Delivery_Quality_Check__c has not been submitted yet. Surfaced on work order list view, dispatcher console, and FM dashboard for pre-install status at a glance.</description>
    <formula>IF(
  Sod_Square_Footage__c = 0 &amp;&amp; Mulch_CY__c = 0,
  &quot;Not Required&quot;,
  IF(
    Delivery_Issue_Flag__c = TRUE,
    &quot;Failed&quot;,
    IF(
      Delivery_QC_Complete__c = TRUE,
      &quot;Passed&quot;,
      &quot;Pending&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery QC Status</label>
    <type>Text</type>
</CustomField>