force-app/main/default/objects/WorkOrder/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outdoor Living</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Custom Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>