force-app/main/default/objects/WorkOrder/fields/DR_Horton_Tree_Avg__c.field-meta.xml
<CustomField>
    <fullName>DR_Horton_Tree_Avg__c</fullName>
    <label>DR Horton Tree Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>