force-app/main/default/objects/WorkOrder/fields/Drive_Start_Lat__c.field-meta.xml
<CustomField>
    <fullName>Drive_Start_Lat__c</fullName>
    <label>Drive Start Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>