force-app/main/default/objects/WorkOrder/fields/Drive_Start_Lng__c.field-meta.xml
<CustomField>
    <fullName>Drive_Start_Lng__c</fullName>
    <label>Drive Start Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>