force-app/main/default/objects/WorkOrder/fields/Drive_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Drive_Started_At__c</fullName>
    <label>Drive Started At</label>
    <type>DateTime</type>
</CustomField>