force-app/main/default/objects/WorkOrder/fields/EPO_Number__c.field-meta.xml
<CustomField>
    <fullName>EPO_Number__c</fullName>
    <label>EPO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>