force-app/main/default/objects/WorkOrder/fields/EPO_SLA_Breach__c.field-meta.xml
<CustomField>
    <fullName>EPO_SLA_Breach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags standard FSL Work Orders whose linked EPO quote has exceeded the approval SLA.</description>
    <label>EPO SLA Breach</label>
    <type>Checkbox</type>
</CustomField>