force-app/main/default/objects/WorkOrder/fields/Expected_Controllers__c.field-meta.xml
<CustomField>
    <fullName>Expected_Controllers__c</fullName>
    <label>Expected Controllers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>