force-app/main/default/objects/WorkOrder/fields/Expected_Heads__c.field-meta.xml
<CustomField>
    <fullName>Expected_Heads__c</fullName>
    <label>Expected Heads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>