force-app/main/default/objects/WorkOrder/fields/Expected_Hoses__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hoses__c</fullName>
    <label>Expected Hoses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>