force-app/main/default/objects/WorkOrder/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>This is the scheduled date of the work.</description>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>