force-app/main/default/objects/WorkOrder/fields/Expected_Valves__c.field-meta.xml
<CustomField>
    <fullName>Expected_Valves__c</fullName>
    <label>Expected Valves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>