force-app/main/default/objects/WorkOrder/fields/Field_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Complete_Date__c</fullName>
    <description>Outdoor Living field execution: timestamp the job was marked field-complete by the crew.</description>
    <label>Field Complete Date</label>
    <type>DateTime</type>
</CustomField>