force-app/main/default/objects/WorkOrder/fields/Finish_Job_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finish_Job_Notes__c</fullName>
    <label>Finish Job Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>