force-app/main/default/objects/WorkOrder/fields/Finish_Job_Reason__c.field-meta.xml
<CustomField>
    <fullName>Finish_Job_Reason__c</fullName>
    <label>Finish Job Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ran Out of Time</fullName>
            </value>
            <value>
                <fullName>Material Short</fullName>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
            </value>
            <value>
                <fullName>Scope Change</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Site Access Blocked</fullName>
            </value>
            <value>
                <fullName>Crew Short</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>