force-app/main/default/objects/WorkOrder/fields/Finish_Job_Required__c.field-meta.xml
<CustomField>
    <fullName>Finish_Job_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finish Job Required</label>
    <type>Checkbox</type>
</CustomField>