force-app/main/default/objects/WorkOrder/fields/FJ_Count__c.field-meta.xml
<CustomField>
    <fullName>FJ_Count__c</fullName>
    <label>Finish Job Count</label>
    <scale>0</scale>
    <summarizedField>Finish_Job__c.Id</summarizedField>
    <summaryForeignKey>Finish_Job__c.Parent_Work_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>