force-app/main/default/objects/WorkOrder/fields/FJ_Recommended__c.field-meta.xml
<CustomField>
    <fullName>FJ_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FJ Recommended by Foreman</label>
    <type>Checkbox</type>
</CustomField>