force-app/main/default/objects/WorkOrder/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Manager Work Orders</relationshipLabel>
    <relationshipName>LOVING_WO_FM</relationshipName>
    <type>Lookup</type>
</CustomField>