force-app/main/default/objects/WorkOrder/fields/Foreman__c.field-meta.xml
<CustomField>
    <fullName>Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foreman</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Foreman</relationshipLabel>
    <relationshipName>WO_Foreman</relationshipName>
    <type>Lookup</type>
</CustomField>