force-app/main/default/objects/WorkOrder/fields/Foreman_Submit_At__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Submit_At__c</fullName>
    <label>Foreman Submit At</label>
    <type>DateTime</type>
</CustomField>